--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-template-remix",
+  "name": "youtac-rs-want-somemore-brae-vincent",
   "private": true,
   "description": "",
   "sideEffects": false,
